update value presentation"

--- a/themes/upbound/assets/scss/_crds.scss
+++ b/themes/upbound/assets/scss/_crds.scss
@@ -237,7 +237,7 @@
       padding-bottom: 7px !important;
       padding-right: 5px;
       color: var(--code-color);
-      font-style: italic;    }
+    }
 
       // transition: margin 0ms;
     }
