--- a/themes/upbound/layouts/_default/home.html
+++ b/themes/upbound/layouts/_default/home.html
@@ -1,4 +1,5 @@
 {{define "main"}}
+
 <div class="home-container">
 
     <div class="intro-grid">
@@ -39,6 +40,51 @@
             Upbound provides fully managed control planes to scale-up Crossplane to 10,000s of cloud resources without overloading your existing Kubernetes deployments.
         </div>
     </div>
+
+    <div class="title">
+        <h2>Recent Articles</h2>
+    </div>
+    <div class="recent-container">
+        <div class="recent">
+            <div id="UfEmbeddedHub1710871278789"></div>
+            <script nonce="<?= $nonce ?>">
+            window._ufHubConfig = window._ufHubConfig || [];
+            window._ufHubConfig.push({
+              'containers':{'app':'#UfEmbeddedHub1710871278789'},
+              'collection': '11463835',
+              'openLink':function(url){
+                window.top.location.href=url;
+              },
+              'lazyloader':{
+                'itemDisplayLimit':20,
+                'maxTilesPerRow':4,
+                'maxItemsTotal': 0
+              },
+              'tileSize': 'xsmall',
+              'enablePageTracking':false,
+              'baseUrl': 'https://resources.upbound.io/',
+              'filesUrl': 'https://resources.upbound.io/',
+              'generatedAtUTC': '2024-03-19 18:01:14',
+            });
+            </script>
+            <script nonce="<?= $nonce ?>">(function(d,t,u) {
+              function load(){
+                var s=d.createElement(t);s.src=u;d.body.appendChild(s);
+              }
+              if (window.addEventListener) {
+                window.addEventListener('load',load,false);
+              }
+              else if (window.attachEvent) {
+                window.attachEvent('onload',load);
+              }
+              else{
+                window.onload=load;
+              }
+            }(document,'script','https://resources.upbound.io/hubsFront/embed_collection'));
+            </script>
+            <!-- /End Uberflip Embedded Hub Widget -->
+            </div>
+        </div>
 
     <div class="title">
         <h2>Resources</h2>
@@ -144,4 +190,14 @@
 
 
 </div>
+{{ if .Site.Params.ufcc_onbrand_local }}
+    <!-- ONBRAND LOCAL -->
+    <link id="onbrand__styles" rel="stylesheet" href="/build/en/en.css">
+{{ else if .Site.Params.ufcc_onbrand_branch }}
+    <!-- ONBRAND BRANCH {{ .Site.Params.ufcc_onbrand_branch }} -->
+    <link id="onbrand__styles-staging" rel="stylesheet" href="//cihost.uberflip.com/upbound-tv2/{{ .Site.Params.ufcc_onbrand_branch }}/build/en/en.css">
+{{ else }}
+    <link id="onbrand__styles-production" rel="stylesheet" href="//cihost.uberflip.com/upbound-tv2/master/build/en/en.css">
+{{ end }}
+
 {{ end }}
