--- a/themes/upbound/assets/scss/_home.scss
+++ b/themes/upbound/assets/scss/_home.scss
@@ -175,12 +175,14 @@
     }
 
     .uberflip * {
-        border-radius: 8px;
+        border-radius: 8px !important;
     }
+
     .uberflip .uf-tile .subtitle.is-5 {
-        font-size: 15px;
-        margin-top: inherit;
-      }
+        font-size: 15px !important;
+        margin-top: inherit !important;
+    }
+
     .title{
         font-size: 20px !important;
         margin-bottom: 20px !important;
