--- a/themes/upbound/assets/scss/_home.scss
+++ b/themes/upbound/assets/scss/_home.scss
@@ -174,6 +174,7 @@
 
     }
 
+    .uberflip {
     .uberflip * {
         border-radius: 8px !important;
     }
@@ -182,6 +183,7 @@
         font-size: 15px !important;
         margin-top: inherit !important;
     }
+}
 
     .title{
         font-size: 20px !important;
