--- a/themes/upbound/assets/scss/_home.scss
+++ b/themes/upbound/assets/scss/_home.scss
@@ -103,42 +103,45 @@
             padding: 30px;
         }
     }
-
     .recent-container {
-        border: 1px solid $up-grey-300;
-        border-radius: 8px;
-        overflow-x: scroll !important;
-        display: inline-flex;
-        flex-wrap: nowrap;
-        padding: 8px;
-        padding-right: 1px !important;
-    }
-
-    .recent {
         display: flex;
         flex-wrap: nowrap;
-         min-width: 0;
+        overflow-x: auto;
+        border: 1px solid $up-grey-300;
+        border-radius: 8px;
+        padding: 8px;
+        align-items: center;
+        justify-content: space-around;
+
+
+        @include media-breakpoint-up(xl) {
+            gap: 20px 30px;
+        }
     }
 
     .uf-tile {
         background-color: var(--home-resource-bg);
         padding: 20px;
-        flex: 0 0 scroll;
-        min-width: 150px !important;
-        border-radius: 8px !important;
+        flex: 1;
+        border-radius: 8px;
+        margin: 0 10px;
 
+        @include media-breakpoint-up(xl) {
+            min-width: 150px !important;
+            max-width: 50000px !important;
+        }
 
+        .uf-tile:first-child {
+            margin-left: 20px;         }
 
+        .uf-tile:last-child {
+            margin-right: 20px;
+
+        }
 
         &:hover {
             background-color: var(--latest-pill-background);
             border-radius: 8px !important;
-
-        }
-
-
-        &:last-child {
-            margin-right: 0;
         }
 
         .uf-tile-image {
@@ -150,30 +153,13 @@
         .uf-tile-title {
             font-size: 20px !important;
             font-weight: 900 !important;
-            margin-top: 10px;
+            margin-top: 10px !important;
             margin-bottom: 10px !important;
-
-        }
-
-        .uf-tile-content {
-            padding: 10px;
-            font-size: 14px;
-            line-height: 1.6;
-            color: #666;
-            background-color: #f9f9f9;
-            border-radius: 4px;
-        }
-
-        .uf-item-page .cke-editor-content code {
-            background-color: #030724;
-
-
         }
 
 
-
+        }
     }
-
 
     .uberflip * {
         border-radius: 8px !important;
@@ -254,4 +240,3 @@
         height: 14px;
         width: 11px;
     }
-}
