--- a/themes/upbound/assets/scss/_home.scss
+++ b/themes/upbound/assets/scss/_home.scss
@@ -118,67 +118,104 @@
             gap: 20px 30px;
         }
     }
-
-    .uf-tile {
-        background-color: var(--home-resource-bg);
-        padding: 20px;
-        flex: 1;
-        border-radius: 8px;
-        margin: 0 10px;
-
-        @include media-breakpoint-up(xl) {
-            min-width: 150px !important;
-            max-width: 50000px !important;
-        }
-
-        .uf-tile:first-child {
-            margin-left: 20px;         }
-
-        .uf-tile:last-child {
-            margin-right: 20px;
-
-        }
-
-        &:hover {
-            background-color: var(--latest-pill-background);
-            border-radius: 8px !important;
-        }
-
-        .uf-tile-image {
-            width: 100%;
-            object-fit: cover;
-            border-radius: 8px;
-        }
-
-        .uf-tile-title {
-            font-size: 20px !important;
-            font-weight: 900 !important;
-            margin-top: 10px !important;
-            margin-bottom: 10px !important;
-        }
-
-
-        }
+    /* Uberflip GWL OB-9786 start here */
+    @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap");
+    #UfEmbeddedHub1701679520152 {
+        max-width: 100%;
     }
-
-    .uberflip * {
-        border-radius: 8px !important;
+    #uf-lazy-loader-11433137 {
+        width: 100% !important;
     }
-
-    .uberflip .uf-tile .subtitle.is-5 {
-        font-size: 15px !important;
-        margin-top: inherit !important;
+    .uf-tile-wrapper *:not(i) {
+        font-family: "Open Sans", sans-serif;
     }
-    .uf-tile-content-label-text::before{
-        content: "\F08E" !important;
-        display: block; /* or 'block', depending on your layout */
+    .uf-tile-wrapper {
+        width: 244px !important;
+        height: 324px !important;
+        border-radius: 5px !important;
+        box-shadow: unset !important;
+        overflow: initial !important;
+    }
+    .uf-tile-wrapper .uf-tile {
+        width: 244px !important;
+        height: 324px !important;
+        border-color: rgba(30, 32, 59, 1) !important;
+        border-radius: 5px !important;
+        transform: scale(0.98);
+        background: var(--home-resource-bg) !important;
+    }
+    .uf-tile-wrapper:not(.quote-tile) time.uf-tile-friendly-timestamp {
+        display: none !important;
+    }
+    .uf-tile-wrapper:not(.quote-tile):not(.uf-highlight-item) .uf-tile-copy {
+        width: 100%;
+        max-height: 100% !important;
+        overflow: hidden;
+        padding: 10px 20px !important;
+        background: var(--home-resource-bg) !important;
+    }
+    .uf-tile-wrapper:not(.quote-tile):not(.uf-highlight-item) .uf-tile .title {
+        font-size: 16px !important;
+    }
+    uf-tile-wrapper:not(.uf-highlight-item) .uf-tile .title {
+        font-weight: 500 !important;
+        line-height: 1.3 !important;
+        text-transform: unset !important;
+        display: -webkit-box !important;
+        -webkit-line-clamp: 5 !important;
+        -webkit-box-orient: vertical !important;
+        overflow: hidden !important;
+    }
+    .uf-tile-wrapper:not(.quote-tile) .uf-tile .title {
+        font-family: Open Sans, Helvetica Neue, Helvetica, Arial, sans-serif !important;
+        color: var(--body-font-color);
+    }
+    .uf-tile-wrapper:not(.quote-tile):not(.uf-highlight-item) .uf-tile .subtitle {
+        font-family: Open Sans, Helvetica Neue, Helvetica, Arial, sans-serif !important;
+        color: rgba(211, 231, 247, 1) !important;
+        display: none !important;
+    }
+    .uf-tile-wrapper:not(.quote-tile) .uf-tile:after {
         background-image: none !important;
-        font-family: "Font Awesome 6 Free"
+    }
+    .uf-tile-wrapper:not(.quote-tile) .uf-tile .uf-tile-content-label {
+        border-top: none !important;
+        background: transparent !important;
+        height: fit-content !important;
+        min-height: 40px !important;
+    }
+    .uf-tile-wrapper:not(.quote-tile) .uf-tile .uf-tile-content-label-text span {
+        margin: 0px !important;
+    }
+    .uf-tile-wrapper:not(.quote-tile) .uf-tile .uf-tile-content-label-text span {
+        font-family: Open Sans, Helvetica Neue, Helvetica, Arial, sans-serif !important;
+        font-size: 14px !important;
+        font-weight: 400 !important;
+        line-height: 1 !important;
+        color: rgba(109, 100, 245, 1) !important;
+        border-color: rgba(30, 32, 59, 1) !important;
+        background: var(--home-resource-bg) !important;
+    }
+    .uf-tile-wrapper:not(.quote-tile) .uf-tile .uf-tile-content-label-arrow {
+        display: none !important;
+    }
+    .uf-tile .uf-tile-content-label-text:before {
 
+        display: none !important;
     }
-    .uf-tile-content-label-text:not(:has(::before[content='"\\F08E"'])) {
-        display: none; /* Or another action as required */
+    .uf-tile-wrapper:hover article {
+        background: linear-gradient(90deg, #6d64f5 0, #c9c3ff) !important;
     }
+    .uf-tile-wrapper:not(.uf-highlight-item) .uf-tile .title {
+        font-weight: 500 !important;
+        line-height: 1.3 !important;
+        text-transform: unset !important;
+        display: -webkit-box !important;
+        -webkit-line-clamp: 5 !important;
+        -webkit-box-orient: vertical !important;
+        overflow: hidden !important;
+    }
+    /* Uberflip GWL OB-9786 end here */
 
 
 
@@ -246,3 +283,4 @@
         height: 14px;
         width: 11px;
     }
+}
