--- a/themes/upbound/assets/scss/_home.scss
+++ b/themes/upbound/assets/scss/_home.scss
@@ -157,7 +157,7 @@
     .uf-tile-wrapper:not(.quote-tile):not(.uf-highlight-item) .uf-tile .title {
         font-size: 16px !important;
     }
-    uf-tile-wrapper:not(.uf-highlight-item) .uf-tile .title {
+    .uf-tile-wrapper:not(.uf-highlight-item) .uf-tile .title {
         font-weight: 500 !important;
         line-height: 1.3 !important;
         text-transform: unset !important;
