Add #content ID to headers to fix 'back to top' button on the API docs
Signed-off-by: Pete Lumbis <pete@upbound.io>

--- a/themes/upbound/layouts/partials/body/content-body.html
+++ b/themes/upbound/layouts/partials/body/content-body.html
@@ -1,5 +1,5 @@
 <div class="">
-	<div class="content-title pb-4">{{.Title}}</div>
+	<div class="content-title pb-4" id="content">{{.Title}}</div>
     {{ .Content }}
 
 
