update enum color for dark mode

--- a/themes/upbound/assets/scss/_crds.scss
+++ b/themes/upbound/assets/scss/_crds.scss
@@ -260,6 +260,7 @@
     .enum {
       padding-top: 7px !important;
       padding-bottom: 7px !important;
+      color: var(--crd-description-color);
     }
 
     .required {
