--- a/themes/upbound/layouts/partials/body/crds.html
+++ b/themes/upbound/layouts/partials/body/crds.html
@@ -14,7 +14,7 @@
         {{/* Iterate over each CRD file */}}
         {{ range $fileName, $crdContent := $crdsData }}
             {{/* The path to download the CRD files. Relative to the _index.md file using "product: crds" */}}
-            {{ $downloadPath := (printf "crds/%s.yaml" $fileName) }}
+            {{ $downloadPath := (printf "yaml/%s.yaml" $fileName) }}
 
             {{ $group   := $crdContent.spec.group }}
             {{ $kind    := $crdContent.spec.names.kind }}
