--- a/themes/upbound/layouts/partials/footer/content.html
+++ b/themes/upbound/layouts/partials/footer/content.html
@@ -24,7 +24,7 @@
     <div class="col footer-links footer-col-1 ms-5">
         <div class="footer-heading">Product</div>
         <div class="py-2"><a href="https://www.upbound.io/product/upbound">Upbound</a></div>
-        <div class="py-2"><a href="https://www.upbound.io/products/universal-crossplane">Universal Crossplane</a></div>
+        <div class="py-2"><a href="https://www.upbound.io/product/universal-crossplane">Universal Crossplane</a></div>
         <div class="py-2"><a href="https://marketplace.upbound.io/">Marketplace</a></div>
         <div class="py-2"><a href="https://www.upbound.io/contact">Request Demo</a></div>
         <div class="py-2"><a href="https://www.upbound.io/partners">Partner Program</a></div>
@@ -39,7 +39,7 @@
 
     <div class="col footer-links footer-col-3">
         <div class="footer-heading">Company</div>
-        <div class="py-2"><a href="https://www.upbound.io/about">About Us</a></div>
+        <div class="py-2"><a href="https://resources.upbound.io/">About Us</a></div>
         <div class="py-2"><a href="https://boards.greenhouse.io/upbound">Careers</a></div>
         <div class="py-2"><a href="https://blog.upbound.io/">Blog</a></div>
         <div class="py-2"><a href="https://www.upbound.io/contact">Contact Us</a></div>
