--- a/themes/upbound/layouts/partials/body/content-body.html
+++ b/themes/upbound/layouts/partials/body/content-body.html
@@ -1,7 +1,17 @@
 <div class="">
 	<div class="content-title pb-4" id="content">{{.Title}}</div>
 	{{ .Content }}
+	<main class="bd-main order-1 {{ if eq $.Params.Product "crds" }}no-toc{{end}}">
+		<div class="bd-intro pt-2 ps-lg-2">
+		  <div class="d-md-flex flex-md-row align-items-center justify-content-between">
+			<div class="mb-3 mb-md-0 d-flex">
+				{{ partial "body/version-dropdown-menu" . }}
+			</div>
+		</div>
+		</main>
 	{{ if eq .Page.Params.product "crds" }}
+
+
 
 
 		  {{ if .Page.Params.state }}
@@ -11,12 +21,10 @@
 			{{ partial "ga-tag" . }}
 		  {{ end }}
 		</div>
+
 		<div id="crd-rows-container">
-		<main class="bd-main">
-				<div class="d-flex">
-					{{ partial "body/version-dropdown-menu" . }}
-				</div>
-		</main>
+
+
 
 		  {{ partial "body/crds" . }}
 		</div>
