--- a/themes/upbound/layouts/shortcodes/content-selector.html
+++ b/themes/upbound/layouts/shortcodes/content-selector.html
@@ -1,7 +1,7 @@
 {{ $rawOptions := .Get "options" }}
 {{ $options := split ($rawOptions) "," }}
 {{ $default := .Get "default" | default (index $options 0) }}
-{{ $randomId := index (seq 2000 | shuffle) 0 }}
+{{ $randomId := index (seq 2000 | shuffle) 0 }} <!-- Explicitly define $randomId at the start -->
 
 <div id="content-selector-{{ $randomId }}" class="content-selector" data-options="{{ $rawOptions }}" data-default="{{ $default }}">
   <ul class="nav nav-tabs content-select-buttons" id="{{$randomId}}" role="tablist">
@@ -52,6 +52,12 @@
         blocks.forEach(block => {
           block.style.display = block.dataset.option === value ? 'block' : 'none';
         });
+
+        if (history.pushState) {
+          history.pushState(null, null, `#${value}`);
+        } else {
+          window.location.hash = value; 
+        }
       }
 
       function syncSelectors(value) {
@@ -73,18 +79,24 @@
         });
       });
 
-      if (window.globalOption && options.includes(window.globalOption)) {
-        updateVisibility(window.globalOption);
+      const hashOption = window.location.hash.replace('#', '');
+      if (hashOption && options.includes(hashOption)) {
+        window.globalOption = hashOption;
+        updateVisibility(hashOption);
       } else if (!window.globalOption) {
         window.globalOption = defaultOption;
         updateVisibility(defaultOption);
       }
     }
 
+    const contentSelectorId = "content-selector-{{ $randomId }}";
     if (document.readyState === 'loading') {
-      document.addEventListener('DOMContentLoaded', initializeContentSelector.bind(this, "content-selector-{{$randomId}}"));
+      document.addEventListener('DOMContentLoaded', function() {
+        initializeContentSelector(contentSelectorId);
+      });
     } else {
-      initializeContentSelector("content-selector-{{ $randomId }}");
+      initializeContentSelector(contentSelectorId);
     }
   })();
 </script>
+
