Add deep link functionality to tabs
Signed-off-by: Jean du Plessis <jean@upbound.io>

--- a/themes/upbound/layouts/shortcodes/tabs.html
+++ b/themes/upbound/layouts/shortcodes/tabs.html
@@ -13,6 +13,7 @@
   <li class="nav-item" role="presentation">
     <button class="nav-link {{if $first_tab }} active {{ end }} me-3"
     id="tab-{{$id}}"
+    data-hash="{{ $name | urlize }}"
     data-bs-toggle="tab"
     data-bs-target="#tab-pane-{{$id}}"
     type="button"
