--- a/themes/upbound/assets/scss/_color-mode-dark.scss
+++ b/themes/upbound/assets/scss/_color-mode-dark.scss
@@ -23,7 +23,7 @@
 
 
     // Single code lines inside text. Code blocks are in _code_theme_dark.scss
-    --code-background: #{$up-grey-700n}75;
+    --code-background: #{$up-grey-700n};
     --code-color: #{$up-grey-000};
     --code-line-number-color: #{$grape};
 
