--- a/themes/upbound/assets/scss/_top-nav.scss
+++ b/themes/upbound/assets/scss/_top-nav.scss
@@ -165,32 +165,40 @@
         margin-top: 10px;
         margin-right: 16px;
         list-style-type: none;
+        z-index: 1022;  // Ensure it's above other fixed elements
 
         @include media-breakpoint-down(lg) {
             margin-top: 0;
             margin-right: 0;
         }
 
-        &.top-nav-item {
-            .form-check.form-switch.colormode {
-                display: flex;
-                align-items: center;
+        .form-check.form-switch {
+            display: flex;
+            align-items: center;
+            padding-left: 2.5em;
 
-                @include media-breakpoint-down(xl) {
-                    margin-top: 0;
-                    margin-right: 0;
+            @include media-breakpoint-down(xl) {
+                margin-top: 0;
+                margin-right: 0;
+            }
+
+            .form-check-input {
+                margin-right: 8px;
+                cursor: pointer;
+                height: 20px;
+                width: 40px;
+                border-color: #{$up-purple-300};
+
+                &:checked {
+                    background-color: var(--background-color);
+                    border-color: #{$up-purple-300};
                 }
+            }
 
-                .form-check-input {
-                    margin-right: 8px;
-                    align-items: center;
-
-                    &:checked {
-                        background-color: var(--background-color);
-                        border-color: #{$up-purple-300};
-                        margin-right: 8px;
-                    }
-                }
+            .form-check-label {
+                color: var(--body-font-color);
+                font-size: 14px;
+                white-space: nowrap;
             }
         }
     }
