--- a/themes/upbound/layouts/partials/body/content-body.html
+++ b/themes/upbound/layouts/partials/body/content-body.html
@@ -4,12 +4,15 @@
   {{ if eq .Page.Title "Query API" }}
     <!-- Include the API partial for the Query API page -->
     {{ partial "body/api" . }}
-  {{ else if or (eq .Page.Params.product "crds") (eq .Page.Params.product "api") }}
+  {{ else if or (eq .Page.Params.product "crds") (eq .Page.Params.product "api")
+  (eq .Page.Params.product "testing-api")}}
     <main class="bd-main order-1 {{ if eq $.Params.Product "crds" }}no-toc{{ end }}">
       <div class="bd-intro pt-2 ps-lg-2">
         <div class="d-md-flex flex-md-row align-items-center justify-content-between">
           <div class="mb-3 mb-md-0 d-flex">
-            {{ partial "body/version-dropdown-menu" . }}
+            {{ if and (ne .Page.Params.product "testing-api") (ne .Page.Params.product "api") }}
+              {{ partial "body/version-dropdown-menu" . }}
+            {{ end }}
           </div>
         </div>
       </div>
@@ -24,6 +27,8 @@
           {{ partial "body/crds" . }}
         {{ else if eq .Page.Params.product "api" }}
           {{ partial "body/api" . }}
+        {{ else if eq .Page.Params.product "testing-api" }}
+          {{ partial "body/testing-api" . }}
         {{ end }}
       </div>
     </main>
