Move around a few pieces of content, convert MCP / 'managed control plane' to simply 'control plane'
Signed-off-by: Craig D Wilhite <craig@upbound.io>

--- a/themes/upbound/layouts/_default/home.html
+++ b/themes/upbound/layouts/_default/home.html
@@ -35,7 +35,7 @@
                     height="45px"
                     width="auto">
            </div>
-           Upbound provides fully managed control planes to scale-up Crossplane to 10,000s of cloud resources without overloading your existing Kubernetes deployments.
+           Upbound provides fully control planes to scale-up Crossplane to 10,000s of cloud resources without overloading your existing Kubernetes deployments.
        </div>
    </div>
 
